# maze

./: .gitignore  .gitmodules  ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Command.h  CommandLineInterpreter.h  CommandLoad.cpp  CommandLoad.h  CommandMove.cpp  CommandMove.h  CommandQuit.cpp  CommandQuit.h  CommandReset.cpp  CommandSave.cpp  CommandSave.h  CommandShow.cpp  CommandShow.h  GameState.h  Matrix.cpp  Matrix.h  Maze.h  Player.cpp  Player.h  Tile.h  Vector2d.cpp  Vector2d.h  main.cpp
Level/: counterToWall  counterToWall.txt  level1.txt  level1withFastmove.txt  solve.poke  solve2.poke  solveTest  solveTest2  solveTest3  solveTest4  solveTest5  solveTest6  solveTestSteps  wiki.maze
Planning/: Class diagram.dia  Einteilung
map_creator/: CMakeLists.txt  map_creator.cpp
maze/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Command.cpp  Command.h  CommandException.h  CommandFastMove.cpp  CommandFastMove.h  CommandLineInterface.cpp  CommandLineInterface.h  CommandLineInterpreter.cpp  CommandLoad.cpp  CommandLoad.h  CommandMove.cpp  CommandMove.h  CommandQuit.cpp  CommandQuit.h  CommandReset.cpp  CommandReset.h  CommandSave.cpp  CommandSave.h  CommandShow.cpp  CommandShow.h  CommandSolve.cpp  CommandSolve.h  CommandWhoAmI.cpp  CommandWhoAmI.h  Convert.cpp  Convert.h  Direction.cpp  Direction.h  FileHandler.cpp  FileHandler.h  FileLoadException.h  Game.cpp  Game.h  GameState.h  InvalidCommandLineArgumentException.cpp  InvalidCommandLineArgumentException.h  Map.cpp  (+41 more)
maze_tests/: CMakeLists.txt
maze_tests/tests/: ArgumentParserTests.cpp  CMakeLists.txt  CommandLineInterpreterTests.cpp  ConvertTests.cpp  FileLoadTest.cpp  GameTests.cpp  MatrixTests.cpp  OtherTests.cpp  SolveTests.cpp  SolveTestsBasic.cpp  TileTests.cpp
maze_tests/tests/testFiles/: completeTeleporter.txt  filename  iceThenTeleporter.txt  impossibleMoves.txt  invalidMap.txt  invalidMap2.txt  invalidMap3.txt  invalidNoEnd.txt  invalidNoStart.txt  invalidTwoEnds.txt  noAvailableSteps.txt  valid.txt  validBig.txt  validQuicksand.txt  validTwoTeleportersValidMove.txt
maze_tests/tests/testFilesSolve/: bonus1.txt  bonus1.txtSolved  bonusNotReachable.txt  bonusNotReachableCounter.txt  bonusNotReachableCounter2.txt  counterHoles.txt  fastmoveString.txt  heavy1.txt  heavy1.txtSolved  heavy2.txt  heavy3.txt  heavy4.txt  heavy5.txt  heavy6.txt  heavy7.txt  heavy8.txt  heavy9.txt  quicksand1.txt  quicksand2.txt  quicksand3.txt  stepExact.txt  stepExactBonus.txt  stepFewBonus.txt  stepMoreQuicksand.txt  teleporterMultiple.txt  teleporterSurroundedByWall.txt  wiki.maze
maze_tests/tests/testFilesSolveBasic/: ice1.maze  ice3.maze  iceBonus.maze  quicksand3.maze  quicksandBonus1.maze  quicksandBonus3.maze  quicksandBonus3.mazeSolved  quicksandBonus4.maze  quicksandBonus5.maze  quicksandInvalid.maze
maze_tests/tests/test_files/: incomplete_teleporter.txt  invalid_available_steps_1.txt  invalid_available_steps_2.txt  invalid_bonus.txt  invalid_moves.txt  invalid_two_starts.txt  no_available_steps.txt  valid.txt  valid_big.txt  valid_bonus.txt  valid_ice.txt  valid_inusfficient_steps.txt  valid_one_way.txt  valid_quicksand.txt  valid_start.txt  valid_with_moves.txt
